erratas contaminacion-aire

--- a/animacions/contaminacion-aire-es.html
+++ b/animacions/contaminacion-aire-es.html
@@ -451,15 +451,15 @@
       <g>
         <g>
           <rect x="127.7" y="473" class="st26" width="563" height="83.2"/>
-          <text transform="matrix(1 0 0 1 127.7266 487.1519)" class="st7 st15 st31">És un GAS considerat com a CONTAMINANT quan es forma a la </text>
-          <text transform="matrix(1 0 0 1 127.7266 512.952)" class="st7 st15 st31">troposfera com a resultat de l&apos;activitat humana i la radiació solar.</text>
+          <text transform="matrix(1 0 0 1 127.7266 487.1519)" class="st7 st15 st31">Es un gas considerado como contaminante cuando se forma en la</text>
+          <text transform="matrix(1 0 0 1 127.7266 512.952)" class="st7 st15 st31">troposfera como resultado de la actividad humana y la radiación solar.</text>
         </g>
         <rect x="127.7" y="541.9" class="st26" width="563" height="62.4"/>
-        <text transform="matrix(1 0 0 1 127.7266 556.026)" class="st7 st15 st31">En altes concentracions i per períodes llargs, té EFECTES </text>
-        <text transform="matrix(1 0 0 1 127.7266 581.826)" class="st7 st15 st31">PERJUDICIALS PER A LA SALUT.</text>
+        <text transform="matrix(1 0 0 1 127.7266 556.026)" class="st7 st15 st31">En altas concentraciones y por períodos largos, tiene EFECTOS</text>
+        <text transform="matrix(1 0 0 1 127.7266 581.826)" class="st7 st15 st31">PERJUDICIALES PARA LA SALUD.</text>
         <rect x="127.7" y="604.8" class="st26" width="572.4" height="110.6"/>
-        <text transform="matrix(1 0 0 1 127.7266 618.9491)" class="st7 st15 st31">Empitjora les MALALTIES PULMONARS, i provoca</text>
-        <text transform="matrix(1 0 0 1 127.7266 644.7491)" class="st7 st15 st31">AL·LÈRGIA i ASMA.</text>
+        <text transform="matrix(1 0 0 1 127.7266 618.9491)" class="st7 st15 st31">Empeora las ENFERMEDADES PULMONARES, y provoca</text>
+        <text transform="matrix(1 0 0 1 127.7266 644.7491)" class="st7 st15 st31">ALERGIA Y ASMA.</text>
         <circle class="st29" cx="111.6" cy="481.2" r="3.9"/>
         <circle class="st29" cx="111.6" cy="550.9" r="3.9"/>
         <circle class="st29" cx="111.6" cy="613.6" r="3.9"/>
@@ -523,7 +523,7 @@
         <rect x="440.1" y="422.2" class="st4" width="2.8" height="274.9"/>
       </g>
       <rect x="521.7" y="487.3" class="st26" width="566.4" height="111.3"/>
-      <text transform="matrix(1 0 0 1 521.6699 501.5626)" class="st7 st15 st35">Son gases tóxicos e irritantes, formados por NO</text>
+      <text transform="matrix(1 0 0 1 521.6699 501.5626)" textLength="380" class="st7 st15 st35">Son gases tóxicos e irritantes, formados por NO</text>
       <text transform="matrix(0.583 0 0 0.583 902.8271 506.0572)" class="st7 st15 st35">2</text>
       <text transform="matrix(1 0 0 1 914 501.5626)" class="st7 st15 st35"> y NO.</text>
       <rect x="521.7" y="534.8" class="st26" width="566.4" height="62.8"/>
