--- a/animacions/contaminacion-aire-en.html
+++ b/animacions/contaminacion-aire-en.html
@@ -11,6 +11,12 @@
   <link rel="stylesheet" href="animacions.css">
 
   <style type="text/css">
+  .titol-principal {
+    margin-top:0;
+  }
+  </style>
+  
+  <style type="text/css">
 
   body {
     font-size: 16px;
