--- a/animacions/contaminacion-aire-es.html
+++ b/animacions/contaminacion-aire-es.html
@@ -9,6 +9,12 @@
   <script type="text/javascript" src="jquery.min.js"></script>
   <script type="text/javascript" src="contaminacion-aire.js"></script>
   <link rel="stylesheet" href="animacions.css">
+  
+  <style type="text/css">
+  .titol-principal {
+    margin-top:0;
+  }
+  </style>
 
   <style type="text/css">
 
