--- a/animacions/contaminacion-aire-ca.html
+++ b/animacions/contaminacion-aire-ca.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="animacions.css">
 
   <style type="text/css">
+  body {
+    margin:0;
+  }
   .titol-principal {
     margin-top:0;
   }
