ciudades-ruidosas errata

--- a/animacions/ciudades-ruidosas-es.html
+++ b/animacions/ciudades-ruidosas-es.html
@@ -138,10 +138,11 @@
 					</g>
 					<rect class="separador" x="805" y="966" width="3" height="204"/>
 					<g class="left">
-						<text transform="matrix(1 0 0 1 394.5244 1082.6781)" class="st3 st4 st5">als límits de l&apos;OMS (55 dB)</text>
-						<text transform="matrix(1 0 0 1 394.5244 1042.7084)" class="st3 st4 st5">de soroll de trànsit superior</text>
-						<text transform="matrix(1 0 0 1 394.5244 1002.7396)" class="st3 st4 st5">estan exposades a nivells</text>
-						<text class="persones_ st3 st6 st16" transform="matrix(1 0 0 1 113.4443 1147.1615)">persones</text>
+						<text transform="matrix(1 0 0 1 394.5244 1122.6781)" class="st3 st4 st5">marca la OMS (55 dB)</text>
+						<text transform="matrix(1 0 0 1 394.5244 1082.6781)" class="st3 st4 st5">superiores a los límites que</text>
+						<text transform="matrix(1 0 0 1 394.5244 1042.7084)" class="st3 st4 st5">de ruido de tráfico</text>
+						<text transform="matrix(1 0 0 1 394.5244 1002.7396)" class="st3 st4 st5">están expuestas a niveles</text>
+						<text class="persones_ st3 st6 st16" transform="matrix(1 0 0 1 113.4443 1147.1615)">personas</text>
 						<text class="_5 st17 st9 st18" transform="matrix(1 0 0 1 270.3955 1090.3969)">5</text>
 						<text transform="matrix(1 0 0 1 170.9082 1091.5463)" class="st17 st6 st19">cada</text>
 						<text transform="matrix(1 0 0 1 170.9082 1054.306)" class="st17 st6 st19">de</text>
