activació botó soroll resp

--- a/animacions/menu-en.html
+++ b/animacions/menu-en.html
@@ -817,7 +817,7 @@
     <!-- ActivitatFisica -->
 
     <!-- Soroll -->
-    <a href="https://www.isglobal.org/en/ciudadesquequeremos#ruido" target="_parent" class="btn disable b-soroll">
+    <a href="https://www.isglobal.org/en/ciudadesquequeremos#ruido" target="_parent" class="btn b-soroll">
       <g class="Soroll">
         <rect class="bg-soroll st27" x="163" y="-0.2" width="162.1" height="152.4"/>
         <g class="soroll-txt">
