--- a/animacions/menu-ca.html
+++ b/animacions/menu-ca.html
@@ -1886,7 +1886,7 @@
     <!-- ActivitatFisica -->
 
     <!-- Soroll -->
-    <a href="https://www.isglobal.org/ca/ciudadesquequeremos#ruido" target="_parent" class="btn disable b-soroll">
+    <a href="https://www.isglobal.org/ca/ciudadesquequeremos#ruido" target="_parent" class="btn b-soroll">
       <g class="Soroll">
         <rect class="bg-soroll st27" x="163" y="-0.2" width="162.1" height="152.4"/>
         <g class="soroll-txt">
