--- a/animacions/menu-ca.html
+++ b/animacions/menu-ca.html
@@ -663,7 +663,7 @@
     <!-- Temperatura -->
 
     <!-- EspaisNaturals -->
-    <a href="https://www.isglobal.org/ca/ciudadesquequeremos#espacios-naturales" target="_parent" class="btn b-espaisnaturals">
+    <a href="https://www.isglobal.org/ca/ciudadesquequeremos#espacios-verdes" target="_parent" class="btn b-espaisnaturals">
       <g class="EspaisNaturals">
         <rect class="bg-espaisnaturals st17" x="325.1" y="-0.2" width="162.1" height="152.4"/>
         <g class="espaisnaturals-txt">
@@ -1733,7 +1733,7 @@
     <!-- Temperatura -->
 
     <!-- EspaisNaturals -->
-    <a href="https://www.isglobal.org/ca/ciudadesquequeremos#espacios-naturales" target="_parent" class="btn b-espaisnaturals">
+    <a href="https://www.isglobal.org/ca/ciudadesquequeremos#espacios-verdes" target="_parent" class="btn b-espaisnaturals">
       <g class="EspaisNaturals">
         <rect class="bg-espaisnaturals st17" x="0.9" y="152.1" width="162.1" height="152.4"/>
         <g class="espaisnaturals-txt">
