actividad-fisica (traduccions)

--- a/animacions/actividad-fisica-ca.html
+++ b/animacions/actividad-fisica-ca.html
@@ -191,25 +191,25 @@
 					<circle class="st5" cx="168.5" cy="1320.5" r="43.3"/>
 				</g>
 				<rect x="319.8" y="1227.1" class="st6" width="1014.2" height="186"/>
-				<text transform="matrix(1 0 0 1 319.7684 1250.9524)" class="st1 st7 st8">LA PLANIFICACIÓN URBANA Y DEL TRANSPORTE influye en el nivel </text>
-				<text transform="matrix(1 0 0 1 319.7684 1288.8524)" class="st1 st7 st8">de actividad física de la ciudadanía y, por tanto, en nuestra salud. </text>
-				<text transform="matrix(1 0 0 1 319.7684 1326.6525)" class="st1 st7 st8">Necesitamos ciudades que prioricen el transporte a pie y en bicicleta, </text>
-				<text transform="matrix(1 0 0 1 319.7684 1364.5524)" class="st1 st7 st8">que cuenten con espacios verdes y faciliten el desplazamiento activo y/o </text>
-				<text transform="matrix(1 0 0 1 319.7684 1402.3524)" class="st1 st7 st8">en transporte público, así como realizar deporte.</text>
+				<text transform="matrix(1 0 0 1 319.7684 1250.9524)" class="st1 st7 st8">LA PLANIFICACIÓ URBANA I DEL TRANSPORT influeix en els nivells </text>
+				<text transform="matrix(1 0 0 1 319.7684 1288.8524)" class="st1 st7 st8">d'activitat física de la ciutadania i, per tant, en nostra salut. </text>
+				<text transform="matrix(1 0 0 1 319.7684 1326.6525)" class="st1 st7 st8">Necessitem ciutats que prioritzin el transport a peu i en bicicleta, </text>
+				<text transform="matrix(1 0 0 1 319.7684 1364.5524)" class="st1 st7 st8">que comptin amb espais verds i facilitin el desplaçament actiu i/o </text>
+				<text transform="matrix(1 0 0 1 319.7684 1402.3524)" class="st1 st7 st8">en transport públic, així com realitzar esport.</text>
 				<rect class="linia_bottom" x="100" y="1181" width="1240" height="3"/>
 			</g>
 			<g class="main-content">
 				<g class="Rellotge_3">
 
 					<rect x="1002" y="1037" class="st6" width="341.6" height="115.5"/>
-					<text transform="matrix(1 0 0 1 1002 1061.199)" class="st9 st10 st11">de actividad física</text>
+					<text transform="matrix(1 0 0 1 1002 1061.199)" class="st9 st10 st11">d'activitat física</text>
 					<text transform="matrix(1 0 0 1 1002 1100.9989)" class="st9 st12 st11">moderada*</text>
 					<text transform="matrix(1 0 0 1 1161.7 1100.9989)" class="st13 st10 st11"> </text>
-					<text transform="matrix(1 0 0 1 1166.7 1100.9989)" class="st1 st10 st11">la mayoría </text>
-					<text transform="matrix(1 0 0 1 1002 1140.699)" class="st1 st10 st11">de días de la semana</text>
+					<text transform="matrix(1 0 0 1 1166.7 1100.9989)" class="st1 st10 st11">la majoria </text>
+					<text transform="matrix(1 0 0 1 1002 1140.699)" class="st1 st10 st11">de dies de la setmana</text>
 					<rect x="1002" y="907.1" class="st6" width="330" height="115.5"/>
-					<text transform="matrix(1 0 0 1 1002 944.2036)" class="st1 st10 st14 st15 st28">30 minutos</text>
-					<text transform="matrix(1 0 0 1 1002 1005.1036)" class="st1 st10 st14 st15 st28">o más</text>
+					<text transform="matrix(1 0 0 1 1002 944.2036)" class="st1 st10 st14 st15 st28">30 minuts</text>
+					<text transform="matrix(1 0 0 1 1002 1005.1036)" class="st1 st10 st14 st15 st28">o més</text>
 					<g class="Rellotge_3_">
 						<path class="st1" d="M1167.6,536.8c-91.5,0-165.6,74.2-165.6,165.6S1076.2,868,1167.6,868s165.6-74.2,165.6-165.6
 						S1259,536.8,1167.6,536.8z M1167.6,843.5c-77.9,0-141-63.1-141-141s63.1-141,141-141s141,63.1,141,141S1245.5,843.5,1167.6,843.5
@@ -241,7 +241,7 @@
 							l5.7-5.6l3.8,3.8l-5.6,5.6L124.3,446z"/>
 						</g>
 						<rect x="204" y="613.4" class="st6" width="644" height="400"/>
-						<text transform="matrix(1 0 0 1 204 635.3197)"><tspan x="0" y="0" class="st18 st19 st20 st15">Felicitats!</tspan><tspan x="0" y="108" class="st18 st19 st20 st15">Estàs complint amb la recomanació de l'OMS  </tspan><tspan x="0" y="144" class="st18 st19 st20 st15">de realitzar almenys 30 minuts d'activitat </tspan><tspan x="0" y="180" class="st18 st19 st20 st15">física moderada la majoria de dies de la </tspan><tspan x="0" y="216" class="st18 st19 st20 st15">setmana. es persones actives tenen un </tspan><tspan x="0" y="252" class="st18 st19 st20 st15">20-30% menys de risc de mort prematura.</tspan></text>
+						<text transform="matrix(1 0 0 1 204 635.3197)"><tspan x="0" y="0" class="st18 st19 st20 st15">Felicitats!</tspan><tspan x="0" y="108" class="st18 st19 st20 st15">Estàs complint amb la recomanació de l'OMS  </tspan><tspan x="0" y="144" class="st18 st19 st20 st15">de realitzar almenys 30 minuts d'activitat </tspan><tspan x="0" y="180" class="st18 st19 st20 st15">física moderada la majoria de dies de la </tspan><tspan x="0" y="216" class="st18 st19 st20 st15">setmana. Les persones actives tenen un </tspan><tspan x="0" y="252" class="st18 st19 st20 st15">20-30% menys de risc de mort prematura.</tspan></text>
 					</g>
 				</g>
 				<g class="Rellotge_2">
@@ -281,7 +281,7 @@
 							l5.7-5.6l3.8,3.8l-5.6,5.6L1334.3,446z"/>
 						</g>
 						<rect x="626.2" y="520.9" class="st6" width="687.9" height="555.7"/>
-						<text transform="matrix(1 0 0 1 626.1591 542.7968)"><tspan x="0" y="0" class="st18 st19 st20 st15">L'OMS recomana realitzar almenys 30 minuts </tspan><tspan x="0" y="40" class="st18 st19 st20 st15">d'activitat física moderada la majoria de dies </tspan><tspan x="0" y="80" class="st18 st19 st20 st15">de la setmana. </tspan><tspan x="0" y="160" class="st18 st19 st20 st15">Arribaràs a aquest objectiu fàcilment si integres </tspan><tspan x="0" y="200" class="st18 st19 st20 st15">l'activitat física a la teva rutina diària: anar en </tspan><tspan x="0" y="240" class="st18 st19 st20 st15">bicicleta a treballar, fer trajectes curts </tspan><tspan x="0" y="280" class="st18 st19 st20 st15">caminant o fer servir el transport públic són algunes </tspan><tspan x="0" y="320" class="st18 st19 st20 st15">formes d’aconseguir-ho. Hi ha apps que conten els </tspan><tspan x="0" y="360" class="st18 st19 st20 st15">passos i l’activitat física que fas i et poden ajudar. </tspan><tspan x="0" y="440" class="st18 st19 st20 st15">Ten en cuenta que las personas físicamente </tspan><tspan x="0" y="480" class="st18 st19 st20 st15">inactives tenen entre un 20-30% més de risc de </tspan><tspan x="0" y="520" class="st18 st19 st20 st15">mort prematura.</tspan></text>
+						<text transform="matrix(1 0 0 1 626.1591 542.7968)"><tspan x="0" y="0" class="st18 st19 st20 st15">L'OMS recomana realitzar almenys 30 minuts </tspan><tspan x="0" y="40" class="st18 st19 st20 st15">d'activitat física moderada la majoria de dies </tspan><tspan x="0" y="80" class="st18 st19 st20 st15">de la setmana. </tspan><tspan x="0" y="160" class="st18 st19 st20 st15">Arribaràs a aquest objectiu fàcilment si integres </tspan><tspan x="0" y="200" class="st18 st19 st20 st15">l'activitat física a la teva rutina diària: anar en </tspan><tspan x="0" y="240" class="st18 st19 st20 st15">bicicleta a treballar, fer trajectes curts </tspan><tspan x="0" y="280" class="st18 st19 st20 st15">caminant o fer servir el transport públic són algunes </tspan><tspan x="0" y="320" class="st18 st19 st20 st15">formes d’aconseguir-ho. Hi ha apps que conten els </tspan><tspan x="0" y="360" class="st18 st19 st20 st15">passos i l’activitat física que fas i et poden ajudar. </tspan><tspan x="0" y="440" class="st18 st19 st20 st15">Tingues en compte que les persones físicament </tspan><tspan x="0" y="480" class="st18 st19 st20 st15">inactives tenen entre un 20-30% més de risc de </tspan><tspan x="0" y="520" class="st18 st19 st20 st15">mort prematura.</tspan></text>
 					</g>
 					<g class="Rellotge2-active">
 						<text transform="matrix(1 0 0 1 110.5 1061.199)" class="st13 st10 st11">d'activitat física</text>
