activació botó actividad-fisica i canvi d'àncores

--- a/animacions/menu-en.html
+++ b/animacions/menu-en.html
@@ -718,7 +718,7 @@
     <!-- EspaisNaturals -->
 
     <!-- ActivitatFisica -->
-    <a href="https://www.isglobal.org/en/ciudadesquequeremos#actividad-fisica" target="_parent" class="btn disable b-activitatfisica">
+    <a href="https://www.isglobal.org/en/ciudadesquequeremos#act-fisica" target="_parent" class="btn b-activitatfisica">
       <g class="ActivitatFisica">
         <rect class="bg-activitatfisica st22" x="487.2" y="-0.2" width="162.1" height="152.4"/>
         <g class="activitatfisica-txt">
@@ -1785,7 +1785,7 @@
     <!-- EspaisNaturals -->
 
     <!-- ActivitatFisica -->
-    <a href="https://www.isglobal.org/en/ciudadesquequeremos#actividad-fisica" target="_parent" class="btn disable b-activitatfisica">
+    <a href="https://www.isglobal.org/en/ciudadesquequeremos#act-fisica" target="_parent" class="btn b-activitatfisica">
       <g class="ActivitatFisica">
         <rect class="bg-activitatfisica st22" x="163" y="152.1" width="162.1" height="152.4"/>
         <g class="activitatfisica-txt">
