--- a/animacions/menu-en.html
+++ b/animacions/menu-en.html
@@ -533,7 +533,7 @@
     </style>
 
     <!-- Conclusions -->
-    <a href="https://www.isglobal.org/en/ciudadesquequeremos#soluciones" target="_parent" class="btn disable b-conclusions">
+    <a href="https://www.isglobal.org/en/ciudadesquequeremos#conclusiones" target="_parent" class="btn b-conclusions">
       <g class="Conclusions">
         <rect class="bg-conclusions st0" x="811.3" y="-0.2" width="162.1" height="152.4"/>
         <g class="conclusions-txt">
@@ -568,7 +568,7 @@
     <!-- Conclusions -->
 
     <!-- Temperatura -->
-    <a href="https://www.isglobal.org/en/ciudadesquequeremos#temperatura" target="_parent" class="btn disable b-temperatura">
+    <a href="https://www.isglobal.org/en/ciudadesquequeremos#temperatura" target="_parent" class="btn b-temperatura">
       <g class="Temperatura">
         <rect class="bg-temperatura st7" x="649.2" y="-0.2" width="162.1" height="152.4"/>
         <g class="temperatura-txt">
@@ -1602,7 +1602,7 @@
     </style>
 
     <!-- Conclusions -->
-    <a href="https://www.isglobal.org/en/ciudadesquequeremos#soluciones" target="_parent" class="btn disable b-conclusions">
+    <a href="https://www.isglobal.org/en/ciudadesquequeremos#conclusiones" target="_parent" class="btn b-conclusions">
       <g class="Conclusions">
         <rect class="bg-conclusions st0" x="163" y="304.5" width="162.1" height="152.4"/>
         <g class="conclusions-txt">
@@ -1637,7 +1637,7 @@
     <!-- Conclusions -->
 
     <!-- Temperatura -->
-    <a href="https://www.isglobal.org/en/ciudadesquequeremos#temperatura" target="_parent" class="btn disable b-temperatura">
+    <a href="https://www.isglobal.org/en/ciudadesquequeremos#temperatura" target="_parent" class="btn b-temperatura">
       <g class="Temperatura">
         <rect class="bg-temperatura st7" x="0.9" y="304.5" width="162.1" height="152.4"/>
         <g class="temperatura-txt">
