islas-calor (issue style)

--- a/animacions/islas-calor-ca.html
+++ b/animacions/islas-calor-ca.html
@@ -34,7 +34,7 @@
 
 <body style="overflow: hidden">
 
-  <header>
+  <header style="display: inline-block;">
     <h1 class="titol-principal">Illes de calor i com ens afecten</h1>
   </header>
 
