--- a/animacions/islas-calor-en.html
+++ b/animacions/islas-calor-en.html
@@ -34,7 +34,7 @@
 
 <body style="overflow: hidden">
 
-  <header>
+  <header style="display: inline-block;">
     <h1 class="titol-principal">Heat Islands and How Do They Affect Us</h1>
   </header>
 
