--- a/animacions/islas-calor-es.html
+++ b/animacions/islas-calor-es.html
@@ -34,7 +34,7 @@
 
 <body style="overflow: hidden">
 
-  <header>
+  <header style="display: inline-block;">
     <h1 class="titol-principal">Islas de calor y cómo nos afectan</h1>
   </header>
 
